--- a/To-Do-App/index.html
+++ b/To-Do-App/index.html
@@ -5,7 +5,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>To Do App</title>
-   <link rel="stylesheet" href="to_do_style.css">
+   <link rel="stylesheet" href="style.css">
 
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,6 +25,6 @@
 
    </ul>
 
-   <script src="to_do_script.js"></script>
+   <script src="script.js"></script>
 </body>
 </html>
