--- a/To-Do-App/index.html
+++ b/To-Do-App/index.html
@@ -17,7 +17,7 @@
 
 </head>
 <body>
-   <h1>Let's Note It</h1>
+   <h1>Let's Note It..</h1>
    <input type="text">
    <button class="btn">Submit</button>
 
